--- a/index.html
+++ b/index.html
@@ -5,48 +5,77 @@
   </head>
   <body>
     <header>CurtasAluraFilms</header>
-    
+
     <section>
       <div class="chamada-texto">
         <h1>CURTAS METRAGENS FILMS</h1>
         <p>Curta-metragem ou, simplesmente, curta é um filme de pequena duração, podendo apresentar-se como uma produção cinematográfica de cariz estético, recreativo, informativo, didático ou publicitário.</p>
         <p>O termo inglês equivalente a curta-metragem (short film) começou a ser utilizado nos Estados Unidos na década de 1910, quando a duração de boa parte dos filmes começou a aumentar.</p>
-        <p>A princípio, o formato de curta-metragem foi mais utilizado em filmes de animação. Ainda hoje há muitos filmes com ação ao vivo (live-action) e de animação produzidos em curta-metragem, havendo inclusive um prêmio Oscar para cada tipo. A metragem curta é também adotada em documentários, filmes de estudantes e filmes de pesquisa experimental.</p>
-        <p>No Brasil, o formato é bastante difundido e está em expansão desde os anos 1970.</p>
-
-        <h2>Clique na imagem para assistir o curta :)</h2>
+        <p>A princípio, o formato de curta-metragem foi mais utilizado em filmes de animação. Ainda hoje há muitos filmes com ação ao vivo (live-action) e de animação produzidos em curta-metragem, havendo inclusive um prêmio Oscar para cada tipo.</p>
       </div>
     </section>
-    
+<!-- Curtas de Romance -->
     <section>
       <h2>Curtas de Romance</h2>
-      <div class="categoria-curtas-de-romance">
-        <a href="https://www.youtube.com/watch?v=XrqSF2OOz_M">
-          <img src="https://img.youtube.com/vi/XrqSF2OOz_M/maxresdefault.jpg" />
-        </a>
-        <p>Paperman</p>
-        <a href="https://www.youtube.com/watch?v=sAaqLIsOmCE">
-          <img src="https://img.youtube.com/vi/sAaqLIsOmCE/maxresdefault.jpg" />
-        </a>
-        <p>In a Heartbeat</p>
-        <a href="https://www.youtube.com/watch?v=Y-MysTEBNyA">
-          <img src="https://img.youtube.com/vi/Y-MysTEBNyA/maxresdefault.jpg" />
-        </a>
-        <p>Extinguished</p>
-        <a href="https://www.youtube.com/watch?v=t5aziLb8IrI">
-          <img src="https://img.youtube.com/vi/t5aziLb8IrI/maxresdefault.jpg" />
-        </a>
-        <p>The Blue Umbrella</p>
-        <!-- outros filmes -->
+      <div class="categoria-curtas">
+        <div>
+          <a href="https://www.youtube.com/watch?v=XrqSF2OOz_M">
+            <img src="https://img.youtube.com/vi/XrqSF2OOz_M/maxresdefault.jpg" />
+          </a>
+          <p>Paperman</p>
+        </div>
+        <div>
+          <a href="https://www.youtube.com/watch?v=sAaqLIsOmCE">
+            <img src="https://img.youtube.com/vi/sAaqLIsOmCE/maxresdefault.jpg" />
+          </a>
+          <p>In a Heartbeat</p>
+        </div>
+        <!-- Continue com outros curtas de romance... -->
+      </div>
+    </section>
+
+    <!-- Curtas de Emoção -->
+    <section>
+      <h2>Curtas de Emoção</h2>
+      <div class="categoria-curtas">
+        <div>
+          <a href="https://www.youtube.com/watch?v=HUngLgGRJpo">
+            <img src="https://img.youtube.com/vi/HUngLgGRJpo/maxresdefault.jpg" />
+          </a>
+          <p>Nuggets</p>
+        </div>
+        <div>
+          <a href="https://www.youtube.com/watch?v=21mDekTZwsw">
+            <img src="https://img.youtube.com/vi/21mDekTZwsw/maxresdefault.jpg" />
+          </a>
+          <p>Brilhante</p>
+        </div>
+        <!-- Continue com outros curtas de emoção... -->
+      </div>
+    </section>
+
+    <!-- Curtas de Fantasia e Animação -->
+    <section>
+      <h2>Curtas de Fantasia e Animação</h2>
+      <div class="categoria-curtas">
+        <div>
+          <a href="https://www.youtube.com/watch?v=B1J6Ou4q8vE">
+            <img src="https://img.youtube.com/vi/B1J6Ou4q8vE/maxresdefault.jpg" />
+          </a>
+          <p>Animation vs. Math</p>
+        </div>
+        <div>
+          <a href="https://www.youtube.com/watch?v=I5cFBi02O34">
+            <img src="https://img.youtube.com/vi/I5cFBi02O34/maxresdefault.jpg" />
+          </a>
+          <p>THE LEGEND OF PIPI</p>
+        </div>
+        <!-- Continue com outros curtas de fantasia e animação... -->
       </div>
     </section>
 
     <section>
-      <h2>Curtas de Emoção</h2>
-      <div class="categoria-curtas-drama">
-        <a href="https://www.youtube.com/watch?v=HUngLgGRJpo">
-          <img src="https://img.youtube.com/vi/HUngLgGRJpo/maxresdefault.jpg" />
-        </a>
-        <p>Nuggets</p>
-        <a href="https://www.youtube.com/watch?v=21mDekTZwsw">
-          <img src="https://img.youtube.com/vi/21mDekTZwsw/maxresdefault.jpg" />
+      <h2> ♡ APROVEITE OS CURTAS ♡</h2>
+    </section>
+  </body>
+</html>
