--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section>
       <h2>Curtas de Romance</h2>
-      <div class="categoria-curtas">
+      <div class="categoria-curtas-romance">
         <div>
           <a href="https://www.youtube.com/watch?v=XrqSF2OOz_M">
             <img src="https://img.youtube.com/vi/XrqSF2OOz_M/maxresdefault.jpg" />
@@ -35,7 +35,7 @@
 
     <section>
       <h2>Curtas de Emoção</h2>
-      <div class="categoria-curtas">
+      <div class="categoria-curtas-emoção">
         <div>
           <a href="https://www.youtube.com/watch?v=HUngLgGRJpo">
             <img src="https://img.youtube.com/vi/HUngLgGRJpo/maxresdefault.jpg" />
@@ -53,7 +53,7 @@
 
     <section>
       <h2>Curtas de Fantasia e Animação</h2>
-      <div class="categoria-curtas">
+      <div class="categoria-curtas-animação">
         <div>
           <a href="https://www.youtube.com/watch?v=B1J6Ou4q8vE">
             <img src="https://img.youtube.com/vi/B1J6Ou4q8vE/maxresdefault.jpg" />
