--- a/index.html
+++ b/index.html
@@ -1,76 +1,21 @@
 <html lang="pt-br">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>CurtasAluraFilms</title>
   </head>
   <body>
-    <header>CurtasAluraFilms</header>
-
-    <section>
-      <div class="chamada-texto">
+<header>CurtasAluraFilms</header>
+<section>
+    <div class="chamada-texto">
         <h1>CURTAS METRAGENS FILMS</h1>
         <p>Curta-metragem ou, simplesmente, curta é um filme de pequena duração, podendo apresentar-se como uma produção cinematográfica de cariz estético, recreativo, informativo, didático ou publicitário.</p>
-        <p>O termo inglês equivalente a curta-metragem (short film) começou a ser utilizado nos Estados Unidos na década de 1910, quando a duração de boa parte dos filmes começou a aumentar.</p>
-        <p>A princípio, o formato de curta-metragem foi mais utilizado em filmes de animação. Ainda hoje há muitos filmes com ação ao vivo (live-action) e de animação produzidos em curta-metragem, havendo inclusive um prêmio Oscar para cada tipo.</p>
-      </div>
-    </section>
+       <p>O termo inglês equivalente a curta-metragem (short film) começou a ser utilizado nos Estados Unidos na década de 1910, quando a duração de boa parte dos filmes começou a aumentar.
 
-    <section>
-      <h2>Curtas de Romance</h2>
-      <div class="categoria-curtas-romance">
-        <div>
-          <a href="https://www.youtube.com/watch?v=XrqSF2OOz_M">
-            <img src="https://img.youtube.com/vi/XrqSF2OOz_M/maxresdefault.jpg" />
-          </a>
-          <p>Paperman</p>
-        </div>
-        <div>
-          <a href="https://www.youtube.com/watch?v=sAaqLIsOmCE">
-            <img src="https://img.youtube.com/vi/sAaqLIsOmCE/maxresdefault.jpg" />
-          </a>
-          <p>In a Heartbeat</p>
-        </div>
-      </div>
-    </section>
+A princípio, o formato de curta-metragem foi mais utilizado em filmes de animação. Ainda hoje há muitos filmes com ação ao vivo (live-action) e de animação produzidos em curta-metragem, havendo inclusive um prêmio Oscar para cada tipo. A metragem curta é também adotada em documentários, filmes de estudantes e filmes de pesquisa experimental.
 
-    <section>
-      <h2>Curtas de Emoção</h2>
-      <div class="categoria-curtas-emoção">
-        <div>
-          <a href="https://www.youtube.com/watch?v=HUngLgGRJpo">
-            <img src="https://img.youtube.com/vi/HUngLgGRJpo/maxresdefault.jpg" />
-          </a>
-          <p>Nuggets</p>
-        </div>
-        <div>
-          <a href="https://www.youtube.com/watch?v=21mDekTZwsw">
-            <img src="https://img.youtube.com/vi/21mDekTZwsw/maxresdefault.jpg" />
-          </a>
-          <p>Brilhante</p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2>Curtas de Fantasia e Animação</h2>
-      <div class="categoria-curtas-animação">
-        <div>
-          <a href="https://www.youtube.com/watch?v=B1J6Ou4q8vE">
-            <img src="https://img.youtube.com/vi/B1J6Ou4q8vE/maxresdefault.jpg" />
-          </a>
-          <p>Animation vs. Math</p>
-        </div>
-        <div>
-          <a href="https://www.youtube.com/watch?v=I5cFBi02O34">
-            <img src="https://img.youtube.com/vi/I5cFBi02O34/maxresdefault.jpg" />
-          </a>
-          <p>THE LEGEND OF PIPI</p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2> ♡ APROVEITE OS CURTAS ♡</h2>
-    </section>
-  </body>
-</html>
+No Brasil, o formato é bastante difundido e está em expansão desde os anos 1970</p>
+ <h2>clique na imagem para assistir o curta :)</h2>
+    </div>
+</section>
+    
