--- a/index.html
+++ b/index.html
@@ -18,4 +18,46 @@ No Brasil, o formato é bastante difundido e está em expansão desde os anos 19
  <h2>clique na imagem para assistir o curta :)</h2>
     </div>
 </section>
-    
+
+     <section>
+      
+      <h2>Curtas De Romance</h2>
+      <div class="categoria-curtas-de-Romance">
+        <a href="https://www.youtube.com/watch?v=XrqSF2OOz_M">
+          <img src="https://img.youtube.com/vi/XrqSF2OOz_M/maxresdefault.jpg" />
+        </a>
+        <p>Paperman</p>
+        <a href="https://www.youtube.com/watch?v=sAaqLIsOmCE">
+          <img src="https://img.youtube.com/vi/sAaqLIsOmCE/maxresdefault.jpg" />
+        </a>
+        <p>In a Heartbeat</p>
+        <a href="https://www.youtube.com/watch?v=Y-MysTEBNyA">
+          <img src="https://img.youtube.com/vi/Y-MysTEBNyA/maxresdefault.jpg" />
+        </a>
+        <p>Extinguished</p>
+        <a href="https://www.youtube.com/watch?v=t5aziLb8IrI">
+          <img src="https://img.youtube.com/vi/t5aziLb8IrI/maxresdefault.jpg" />
+        </a>
+        <p>The Blue Umbrella</p>
+        <a href="https://www.youtube.com/watch?v=KuuEs0oVVS8">
+          <img src="https://img.youtube.com/vi/KuuEs0oVVS8/maxresdefault.jpg" />
+        </a>
+        <p>Silent Love</p>
+        <a href="https://www.youtube.com/watch?v=TrqwbjXz7mI">
+          <img src="https://img.youtube.com/vi/TrqwbjXz7mI/maxresdefault.jpg" />
+        </a>
+        <p>História de amor de dois Casais</p>
+        <a href="https://www.youtube.com/watch?v=_-ERyLCNlQ4">
+          <img src="https://img.youtube.com/vi/_-ERyLCNlQ4/maxresdefault.jpg" />
+        </a>
+        <p>Tellervo</p>
+        <a href="https://www.youtube.com/watch?v=YZ0tR9oyHb4">
+          <img src="https://img.youtube.com/vi/YZ0tR9oyHb4/maxresdefault.jpg" />
+        </a>
+        <p>O ELEVADOR</p>
+        <a href="https://www.youtube.com/watch?v=APM4Oz-Hq8I">
+          <img src="https://img.youtube.com/vi/APM4Oz-Hq8I/maxresdefault.jpg" />
+        </a>
+        <p>Uma História De Amor</p>
+      </div>
+    </section>
