--- a/index.html
+++ b/index.html
@@ -61,3 +61,38 @@ No Brasil, o formato é bastante difundido e está em expansão desde os anos 19
         <p>Uma História De Amor</p>
       </div>
     </section>
+
+    <section>
+      <h2>Curtas De Emoção</h2>
+      <div class="Categoria-curtas-drama">
+        <a href="https://www.youtube.com/watch?v=HUngLgGRJpo">
+          <img src="https://img.youtube.com/vi/HUngLgGRJpo/maxresdefault.jpg" />
+        </a>
+        <p>Nuggets</p>
+        <a href="https://www.youtube.com/watch?v=21mDekTZwsw">
+          <img src="https://img.youtube.com/vi/21mDekTZwsw/maxresdefault.jpg" />
+        </a>
+        <p>Brilhante </p>
+        <a href="https://www.youtube.com/watch?v=kGVWLQzr8QM">
+          <img src="https://img.youtube.com/vi/kGVWLQzr8QM/maxresdefault.jpg" />
+        </a>
+        <p>VUELA</p>
+        <a href="https://www.youtube.com/watch?v=nf4ZXpg1Jmk">
+          <img src="https://img.youtube.com/vi/nf4ZXpg1Jmk/maxresdefault.jpg" />
+        </a>
+        <p>I Wish…</p>
+        <a href="https://www.youtube.com/watch?v=3J-QtaDxZ70">
+        <img src="https://img.youtube.com/vi/3J-QtaDxZ70/maxresdefault.jpg" />
+        </a>
+        <p>Snack Attack</p>
+        <a href="https://www.youtube.com/watch?v=V6ui161NyTg">
+          <img src="https://img.youtube.com/vi/V6ui161NyTg/maxresdefault.jpg" />
+        </a>
+        <p>Vencedor</p>
+        <a href="https://www.youtube.com/watch?v=AnEGaKtbs2E">
+          <img src="https://img.youtube.com/vi/AnEGaKtbs2E/maxresdefault.jpg" />
+        </a>
+        <p>Why is everyone better than me? </p>
+         </div>
+    </section>
+    
