--- a/index.html
+++ b/index.html
@@ -95,4 +95,45 @@ No Brasil, o formato é bastante difundido e está em expansão desde os anos 19
         <p>Why is everyone better than me? </p>
          </div>
     </section>
-    
+
+    <section>
+      <h2>Curtas De Animação e Fantasia</h2>
+      <div class="Categoria-curta-Fantasia-Animação">
+        <a href="https://www.youtube.com/watch?v=B1J6Ou4q8vE">
+          <img src="https://img.youtube.com/vi/B1J6Ou4q8vE/maxresdefault.jpg" />
+        </a>
+        <p>Animation vs. Math</p>
+        <a href="https://www.youtube.com/watch?v=I5cFBi02O34">
+        <img src="https://img.youtube.com/vi/I5cFBi02O34/maxresdefault.jpg" />
+        </a>
+        <p>THE LEGEND OF PIPI</p>
+        <a href="https://www.youtube.com/watch?v=NL3Kx0S1RzQ">
+          <img src="https://img.youtube.com/vi/NL3Kx0S1RzQ/maxresdefault.jpg" />
+        </a>
+        <p>TAMO JUNTO</p>
+        <a href="https://www.youtube.com/watch?v=ofnCdC8P70g">
+          <img src="https://img.youtube.com/vi/ofnCdC8P70g/maxresdefault.jpg" />
+        </a>
+        <p>The Life of Death</p>
+        <a href="https://www.youtube.com/watch?v=CAYDRIbXFAc">
+          <img src="https://img.youtube.com/vi/CAYDRIbXFAc/maxresdefault.jpg" />
+        </a>
+        <p>Afternoon Class - Aula Da Tarde</p>
+        <a href="https://www.youtube.com/watch?v=HBxe9Pgggfk">
+          <img src="https://img.youtube.com/vi/HBxe9Pgggfk/maxresdefault.jpg" />
+        </a>
+        <p>MEDUSA - The Stone Kingdom</p>
+        <a href="https://www.youtube.com/watch?v=yG8YFA09xU4">
+          <img src="https://img.youtube.com/vi/yG8YFA09xU4/maxresdefault.jpg" />
+        </a>
+        <p>Olha D'Artista</p>
+        <a href="https://www.youtube.com/watch?v=JvLFIf7aXmk">
+          <img src="https://img.youtube.com/vi/JvLFIf7aXmk/maxresdefault.jpg" />
+        </a>
+        <p>First Born</p>
+      </div>
+    </section>
+
+    <section>
+      <h2> ♡ APROVEITE OS CURTAS ♡</h2>
+    </section>
