--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
     
     <script>
-        const apiKey = "";
+        const apiKey = "nojekyll";
         const playlists = {
             romance: "PLhj3v7Mjd_ZnGaSR6y0YmaLIE_Fr1Detm",
             emocao: "PLhj3v7Mjd_ZlP4qX_bOf_xbIghfALI2ut",
